WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192038
WKNavigation.AutomaticViewReloadAfterWebProcessCrash asserts after
r238538
https://bugs.webkit.org/show_bug.cgi?id=192038
Summary
WKNavigation.AutomaticViewReloadAfterWebProcessCrash asserts after r238538
Tim Horton
Reported
2018-11-27 14:26:00 PST
WKNavigation.AutomaticViewReloadAfterWebProcessCrash asserts after
r238538
Attachments
Patch
(2.12 KB, patch)
2018-11-27 14:27 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-11-27 14:27:19 PST
Created
attachment 355781
[details]
Patch
WebKit Commit Bot
Comment 2
2018-11-27 15:19:46 PST
The commit-queue encountered the following flaky tests while processing
attachment 355781
[details]
: inspector/unit-tests/promise-utilities.html
bug 192043
(author:
drousso@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2018-11-27 15:20:33 PST
Comment on
attachment 355781
[details]
Patch Clearing flags on attachment: 355781 Committed
r238580
: <
https://trac.webkit.org/changeset/238580
>
WebKit Commit Bot
Comment 4
2018-11-27 15:20:35 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-11-27 15:25:39 PST
<
rdar://problem/46291179
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug