WKNavigation.AutomaticViewReloadAfterWebProcessCrash asserts after r238538 https://bugs.webkit.org/show_bug.cgi?id=192038 <rdar://problem/46288457>

Reviewed by Wenson Hsieh.

* UIProcess/WebPageProxy.cpp:
(WebKit::m_resetRecentCrashCountTimer):
(WebKit::WebPageProxy::finishAttachingToWebProcess):
(WebKit::WebPageProxy::resetState):
(WebKit::m_editableImageController): Deleted.
Properly invalidate m_editableImageController when resetting WebPageProxy.
Otherwise, the MessageReceiverMaps get invalidated, then later when
EditableImageController goes away we assert trying to remove the receiver.


Canonical link: https://commits.webkit.org/206738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238580 268f45cc-cd09-0410-ab3c-d52691b4dbfc